--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,8 @@ button.btn {
 @media screen and (min-width: 900px) {
     main {
         max-width: calc(916px);
+        margin-block-start: 3rem;
+
     }
     .container {
         flex-flow: row nowrap;
